--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" id="titel" aria-current="page"><h2>HOME</h2><span class="visually-hidden">(current)</span></a>
+                        <a class="nav-link active" href="./index.html" id="titel" aria-current="page"><h2>HOME</h2><span class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" onclick="openWin();" id="titel"> <h2>CREATE</h2></a>
