--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </script>
   <script>
     let openWin = () => {
-         window.open("http://127.0.0.1:5500/create.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=1200,left=1200,width=800,height=800");
+         window.open("https://amxx1679.github.io/ecocaching.github.io/create.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=1200,left=1200,width=800,height=800");
     }
   </script>
 </body>
